fix: search button verticel align

--- a/packages/docs/fluent-editor/.vitepress/theme/style.css
+++ b/packages/docs/fluent-editor/.vitepress/theme/style.css
@@ -107,3 +107,7 @@
 .VPNavBarTitle .title > span {
   height: fit-content;
 }
+
+.DocSearch-Button-Placeholder {
+  height: fit-content;
+}
